--- a/source/theme.yaml
+++ b/source/theme.yaml
@@ -1,5 +1,5 @@
 ThemeApiVersion: 2.0.0
-Id: Vapour_8b15c46a-90c2-4fe5-9ebb-1ab25ba7fcb1
-Name: Vapour
-Author: Your Name Here
-Version: 1.0
+Id: 8b15c46a-90c2-4fe5-9ebb-1ab25ba7fcb1
+Name: Helium
+Author: darklinkpower
+Version: 0.8
