--- a/source/theme.yaml
+++ b/source/theme.yaml
@@ -3,3 +3,8 @@ Id: 8b15c46a-90c2-4fe5-9ebb-1ab25ba7fcb1
 Name: Helium
 Author: darklinkpower
 Version: 0.8
+Links:
+- Name: GitHub
+  Url: https://github.com/darklinkpower/Helium
+- Name: Playnite Forums thread
+  Url: https://playnite.link/forum/thread-811.html
