--- a/manifests/Installer_Manifest.yaml
+++ b/manifests/Installer_Manifest.yaml
@@ -23,3 +23,11 @@ Packages:
       - 'Fix being unable to click elements at the top in created windows'
       - 'Fix contents inside TabControl using Hand cursor'
       - 'Remove unused ThemeModifer extension constants'
+  - Version: 0.10
+    RequiredApiVersion: 2.0.0
+    ReleaseDate: 2021-09-18
+    PackageUrl: https://github.com/darklinkpower/Helium/releases/download/0.10/8b15c46a-90c2-4fe5-9ebb-1ab25ba7fcb1_0_10.pthm
+    Changelog:
+      - 'Details View: Fix plugin being in the center vertically'
+      - 'Details View: Add logo and video support using Extra Metadata Loader extension'
+      - 'Grid View: Add logo support using Extra Metadata Loader extension'
