Details view: add ThemeModifer variable to modify the description dock position

--- a/source/thememodifier.yaml
+++ b/source/thememodifier.yaml
@@ -1,2 +1,3 @@
 Constants:
     - DetailsViewDescriptionWidth(150,750): 'Details View: Width of description'
+    - DetailsViewDescriptionDockToRight: 'Details View: Dock description to the right'
