--- a/manifests/Installer_Manifest.yaml
+++ b/manifests/Installer_Manifest.yaml
@@ -57,3 +57,12 @@ Packages:
     PackageUrl: https://github.com/darklinkpower/Helium/releases/download/1.2/8b15c46a-90c2-4fe5-9ebb-1ab25ba7fcb1_1_2.pthm
     Changelog:
       - 'Details View: Support for ReviewViewer extension Steam reviews control'
+  - Version: 1.3
+    RequiredApiVersion: 2.0.0
+    ReleaseDate: 2021-09-30
+    PackageUrl: https://github.com/darklinkpower/Helium/releases/download/1.3/8b15c46a-90c2-4fe5-9ebb-1ab25ba7fcb1_1_3.pthm
+    Changelog:
+      - 'Update to changes in Playnite 9 stable release'
+      - 'Top Panel: View button show toggle state'
+      - 'Grid View: Add Review Viewer extension support'
+      - 'List View: Group count styling'
