--- a/source/thememodifier.yaml
+++ b/source/thememodifier.yaml
@@ -1,6 +1,7 @@
 Constants:
-    - DetailsViewDescriptionWidth(150,750): 'Details View: Width of description'
-    - DetailsViewDescriptionDockToRight: 'Details View: Dock description to the right'
-    - DetailsViewBackgroundVerticalAlignment: 'Details View: Vertical alignment of the background image.'
-    - DetailsViewBackgroundHorizontalAlignment: 'Details View: Horizontal alignment of the background image.'
-    - DetailsViewLogoVisibility: 'Details View: Logo visibility.'
+    - "Details View"
+    - DetailsViewDescriptionWidth(150,750): 'Width of description'
+    - DetailsViewDescriptionDockToRight: 'Dock description to the right'
+    - DetailsViewBackgroundVerticalAlignment: 'Vertical alignment of the background image'
+    - DetailsViewBackgroundHorizontalAlignment: 'Horizontal alignment of the background image'
+    - DetailsViewLogoVisibility: 'Force logo visibility (overrides plugin settings)'
