Details View: Add ThemeModifier variable to show or hide information panel when Playnite starts #6

--- a/source/thememodifier.yaml
+++ b/source/thememodifier.yaml
@@ -1,3 +1,4 @@
 Constants:
     - DetailsViewDescriptionWidth(150,750): 'Details View: Width of description'
     - DetailsViewDescriptionDockToRight: 'Details View: Dock description to the right'
+    - DetailsViewShowInfoPanelDefault: 'Details View: Show information panel by default'
