Details View and Grid View: Add ThemeModifier varialbles to configure if Extra Metadata Loader logos can be used in the view

--- a/source/thememodifier.yaml
+++ b/source/thememodifier.yaml
@@ -4,3 +4,5 @@ Constants:
     - DetailsViewShowInfoPanelDefault: 'Details View: Show information panel by default'
     - DetailsViewBackgroundVerticalAlignment: 'Details View: Vertical alignment of the background image'
     - DetailsViewBackgroundHorizontalAlignment: 'Details View: Horizontal alignment of the background image'
+    - DetailsViewAllowUseOfLogos: 'Details View: Allow use of Extra Metadata Loader logos'
+    - GridViewAllowUseOfLogos: 'Grid View: Allow use of Extra Metadata Loader logos'
