--- a/source/thememodifier.yaml
+++ b/source/thememodifier.yaml
@@ -5,4 +5,5 @@ Constants:
     - DetailsViewBackgroundVerticalAlignment: 'Details View: Vertical alignment of the background image'
     - DetailsViewBackgroundHorizontalAlignment: 'Details View: Horizontal alignment of the background image'
     - DetailsViewAllowUseOfLogos: 'Details View: Allow use of Extra Metadata Loader logos'
+    - DetailsViewShowHltbDataGrid: 'Details View: Show HowLongToBeat data grid'
     - GridViewAllowUseOfLogos: 'Grid View: Allow use of Extra Metadata Loader logos'
