--- a/source/theme.yaml
+++ b/source/theme.yaml
@@ -1,6 +1,6 @@
 ThemeApiVersion: 2.0.0
-Id: 8b15c46a-90c2-4fe5-9ebb-1ab25ba7fcb1
-Name: Helium
+Id: 8b15c46a-90c2-4fe5-9ebb-1ab25ba7fcb2
+Name: HeliumUHD
 Author: darklinkpower
 Version: 1.5
 Links:
