Grid View: Add ThemeModifier setting to enable cover highlight animation

--- a/source/thememodifier.yaml
+++ b/source/thememodifier.yaml
@@ -8,3 +8,4 @@ Constants:
     - DetailsViewShowHltbDataGrid: 'Details View: Show HowLongToBeat data grid'
     - GridViewAllowUseOfLogos: 'Grid View: Allow use of Extra Metadata Loader logos'
     - GridViewShowHltbDataGrid: 'Grid View: Show HowLongToBeat data grid'
+    - GridViewEnableCoverShineAnimation: 'Grid View: Enable cover highlight animation'
