--- a/source/thememodifier.yaml
+++ b/source/thememodifier.yaml
@@ -1,11 +1,13 @@
 Constants:
-    - DetailsViewDescriptionWidth(150,750): 'Details View: Width of description'
-    - DetailsViewDescriptionDockToRight: 'Details View: Dock description to the right'
-    - DetailsViewShowInfoPanelDefault: 'Details View: Show information panel by default'
-    - DetailsViewBackgroundVerticalAlignment: 'Details View: Vertical alignment of the background image'
-    - DetailsViewBackgroundHorizontalAlignment: 'Details View: Horizontal alignment of the background image'
-    - DetailsViewAllowUseOfLogos: 'Details View: Allow use of Extra Metadata Loader logos'
-    - DetailsViewShowHltbDataGrid: 'Details View: Show HowLongToBeat data grid'
-    - GridViewAllowUseOfLogos: 'Grid View: Allow use of Extra Metadata Loader logos'
-    - GridViewShowHltbDataGrid: 'Grid View: Show HowLongToBeat data grid'
-    - GridViewEnableCoverShineAnimation: 'Grid View: Enable cover highlight animation'
+    - "Details View"
+    - DetailsViewDescriptionWidth(150,750): 'Width of description'
+    - DetailsViewDescriptionDockToRight: 'Dock description to the right'
+    - DetailsViewShowInfoPanelDefault: 'Show information panel by default'
+    - DetailsViewBackgroundVerticalAlignment: 'Vertical alignment of the background image'
+    - DetailsViewBackgroundHorizontalAlignment: 'Horizontal alignment of the background image'
+    - DetailsViewAllowUseOfLogos: 'Allow use of Extra Metadata Loader logos'
+    - DetailsViewShowHltbDataGrid: 'Show HowLongToBeat data grid'
+    - "Grid View"
+    - GridViewAllowUseOfLogos: 'Allow use of Extra Metadata Loader logos'
+    - GridViewShowHltbDataGrid: 'Show HowLongToBeat data grid'
+    - GridViewEnableCoverShineAnimation: 'Enable cover highlight animation'
