--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -27,7 +27,7 @@ body:
       label: Extensions log
       description: "If the issue is a crash, you can attach Playnite's Extensions.log file. It is located in Playnite's installation directory in the portable version or in %AppData%\Playnite (Can be pasted in Explorer) in the installed version"
     validations:
-      required: true
+      required: false
   - type: textarea
     attributes:
       label: Screenshots
