--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -25,7 +25,7 @@ body:
   - type: input
     attributes:
       label: Extensions log
-      description: "If the issue is a crash, you can attach Playnite's Extensions.log file. It is located in Playnite's installation directory in the portable version or in %AppData%\Playnite (Can be pasted in Explorer) in the installed version"
+      description: "If the issue is a crash, you can attach Playnite's Extensions.log file. It is located in Playnite's installation directory in the portable version or in %AppData%\\Playnite (Can be pasted in Explorer) in the installed version"
     validations:
       required: false
   - type: textarea
