--- a/manifests/Installer_Manifest.yaml
+++ b/manifests/Installer_Manifest.yaml
@@ -159,3 +159,9 @@ Packages:
     Changelog:
       - 'General: Adjustments to ThemeModifier variable names'
       - 'Details View: Add support for ExtraMetadataLoader extension alternative video player'
+  - Version: 1.14
+    RequiredApiVersion: 2.1.0
+    ReleaseDate: 2022-01-17
+    PackageUrl: https://github.com/darklinkpower/Helium/releases/download/1.14/8b15c46a-90c2-4fe5-9ebb-1ab25ba7fcb1_1_14.pthm
+    Changelog:
+      - 'Details View: Minor visual changes to details and plugins panels'
