GridView: Show favorites icon in game covers for games marked as favorite. Can be enabled or disabled via ThemeModifier extension

--- a/source/thememodifier.yaml
+++ b/source/thememodifier.yaml
@@ -12,3 +12,4 @@ Constants:
     - GridViewAllowUseOfLogos: 'Allow use of Extra Metadata Loader logos'
     - GridViewShowHltbDataGrid: 'Show HowLongToBeat data grid'
     - GridViewEnableCoverShineAnimation: 'Enable cover highlight animation'
+    - GridViewLibraryGameShowFavorite: 'Show favorites icon in game covers'
