--- a/manifests/Installer_Manifest.yaml
+++ b/manifests/Installer_Manifest.yaml
@@ -182,3 +182,9 @@ Packages:
       - 'DetailsView: Set minimium height to Header area in details'
       - 'GridView: Always center ExtraMetadata extension logo vertically'
       - 'Library: Game background image on window will no longer show even if enabled since the theme was never intended to be used with it enabled'
+  - Version: 1.17
+    RequiredApiVersion: 2.1.0
+    ReleaseDate: 2022-03-03
+    PackageUrl: https://github.com/darklinkpower/Helium/releases/download/1.17/8b15c46a-90c2-4fe5-9ebb-1ab25ba7fcb1_1_17.pthm
+    Changelog:
+      - 'GridView: Added ThemeModifier extension option to display game name if logo is visible or not'
