--- a/source/thememodifier.yaml
+++ b/source/thememodifier.yaml
@@ -10,6 +10,7 @@ Constants:
     - DetailsViewLibraryGameShowFavorite: 'Show favorites icon in game list'
     - "Grid View"
     - GridViewDisplayGameNameIfLogoVisible: 'Display game name if logo is visible'
+    - GridViewCoverSubtitleVisibility: 'Visibility of time played under game covers'
     - GridViewAllowUseOfLogos: 'Allow use of Extra Metadata Loader logos'
     - GridViewShowHltbDataGrid: 'Show HowLongToBeat data grid'
     - GridViewEnableCoverShineAnimation: 'Enable cover highlight animation'
