--- a/manifests/Installer_Manifest.yaml
+++ b/manifests/Installer_Manifest.yaml
@@ -204,3 +204,9 @@ Packages:
     PackageUrl: https://github.com/darklinkpower/Helium/releases/download/1.19/8b15c46a-90c2-4fe5-9ebb-1ab25ba7fcb1_1_19.pthm
     Changelog:
       - 'Grid View: Fix highlight animation applying to game name area when using horizontal aspect ratios'
+  - Version: 1.20
+    RequiredApiVersion: 2.1.0
+    ReleaseDate: 2022-03-24
+    PackageUrl: https://github.com/darklinkpower/Helium/releases/download/1.20/8b15c46a-90c2-4fe5-9ebb-1ab25ba7fcb1_1_20.pthm
+    Changelog:
+      - 'Details View: Add support for cover control of BackgroundChanger extension'
