Grid View: Added library banners to covers. Disabled by default. Can be enabled with option in ThemeModifier extension. Includes option to configure the banner opacity.

--- a/source/thememodifier.yaml
+++ b/source/thememodifier.yaml
@@ -15,3 +15,5 @@ Constants:
     - GridViewShowHltbDataGrid: 'Show HowLongToBeat data grid'
     - GridViewEnableCoverShineAnimation: 'Enable cover highlight animation'
     - GridViewLibraryGameShowFavorite: 'Show favorites icon in game covers'
+    - GridViewCoverDisplayLibraryBanner: 'Show game library banner on cover'
+    - GridViewCoverLibraryBannerOpacity(0.5, 1.0): 'Opacity of library banner'
