--- a/manifests/Installer_Manifest.yaml
+++ b/manifests/Installer_Manifest.yaml
@@ -219,3 +219,11 @@ Packages:
       - 'Grid View: Added library banners to covers. Disabled by default. Can be enabled with option in ThemeModifier extension. Includes option to configure the banner opacity.'
       - 'Grid View: Fix separators colors not being consistent'
       - 'SearchBox: Use hand mouse for text clear button'
+  - Version: 1.22
+    RequiredApiVersion: 2.1.0
+    ReleaseDate: 2022-04-27
+    PackageUrl: https://github.com/darklinkpower/Helium/releases/download/1.22/8b15c46a-90c2-4fe5-9ebb-1ab25ba7fcb1_1_22.pthm
+    Changelog:
+      - 'GridView: Added library banners for Groupees and Legacy Games library plugin because Jeshibu was angry at me :('
+      - 'GridView: Library banners moved to top of cover images'
+      - 'GridView: Show generic library banner for games with a library that does not have a specific banner'
