--- a/manifests/Installer_Manifest.yaml
+++ b/manifests/Installer_Manifest.yaml
@@ -227,3 +227,9 @@ Packages:
       - 'GridView: Added library banners for Groupees and Legacy Games library plugin because Jeshibu was angry at me :('
       - 'GridView: Library banners moved to top of cover images'
       - 'GridView: Show generic library banner for games with a library that does not have a specific banner'
+  - Version: 1.23
+    RequiredApiVersion: 2.1.0
+    ReleaseDate: 2022-04-28
+    PackageUrl: https://github.com/darklinkpower/Helium/releases/download/1.23/8b15c46a-90c2-4fe5-9ebb-1ab25ba7fcb1_1_23.pthm
+    Changelog:
+      - 'GridView: Fix covers displaying incorrectly at certain aspect ratios and fix favorites and DuplicateHider icons placement being inconsistent if Library Banners are enabled'
