--- a/manifests/Installer_Manifest.yaml
+++ b/manifests/Installer_Manifest.yaml
@@ -239,3 +239,9 @@ Packages:
     PackageUrl: https://github.com/darklinkpower/Helium/releases/download/1.24/8b15c46a-90c2-4fe5-9ebb-1ab25ba7fcb1_1_24.pthm
     Changelog:
       - 'GridView: Implemented banners for game platform. Special thanks to the Playnite community for making these banners'
+  - Version: 1.25
+    RequiredApiVersion: 2.1.0
+    ReleaseDate: 2022-04-29
+    PackageUrl: https://github.com/darklinkpower/Helium/releases/download/1.25/8b15c46a-90c2-4fe5-9ebb-1ab25ba7fcb1_1_25.pthm
+    Changelog:
+      - 'GridView: Added additional platform banners (By NatParable)'
