--- a/source/thememodifier.yaml
+++ b/source/thememodifier.yaml
@@ -13,7 +13,8 @@ Constants:
     - GridViewCoverSubtitleVisibility: 'Visibility of time played under game covers'
     - GridViewAllowUseOfLogos: 'Allow use of Extra Metadata Loader logos'
     - GridViewShowHltbDataGrid: 'Show HowLongToBeat data grid'
-    - GridViewEnableCoverShineAnimation: 'Enable cover highlight animation'
+    - GridViewEnableCoverShineAnimation: 'Enable cover highlight animation on hover'
+    - GridViewEnablePlayingBorderAnimation: 'Enable cover animation of games that are running'
     - GridViewLibraryGameShowFavorite: 'Show favorites icon in game covers'
     - GridViewCoverDisplayLibraryBanner: 'Show game platforms and library banners on covers'
     - GridViewCoverLibraryBannerOpacity(0.5, 1.0): 'Opacity of library banner'
