--- a/manifests/Installer_Manifest.yaml
+++ b/manifests/Installer_Manifest.yaml
@@ -256,3 +256,9 @@ Packages:
       - 'GridView: Hide Reviews Viewer section for games not from Steam or PC games'
       - 'GridView: PC games without a library plugin banner will use a PC platform banner'
       - 'GridView: Reduce memory used by banner images'
+  - Version: 1.27
+    RequiredApiVersion: 2.1.0
+    ReleaseDate: 2022-05-07
+    PackageUrl: https://github.com/darklinkpower/Helium/releases/download/1.27/8b15c46a-90c2-4fe5-9ebb-1ab25ba7fcb1_1_27.pthm
+    Changelog:
+      - 'Grid View: Added a highlight animation to covers of games that are running. Enabled by default, can be enabled or disabled with ThemeModifier extension'
