--- a/manifests/Installer_Manifest.yaml
+++ b/manifests/Installer_Manifest.yaml
@@ -262,3 +262,11 @@ Packages:
     PackageUrl: https://github.com/darklinkpower/Helium/releases/download/1.27/8b15c46a-90c2-4fe5-9ebb-1ab25ba7fcb1_1_27.pthm
     Changelog:
       - 'Grid View: Added a highlight animation to covers of games that are running. Enabled by default, can be enabled or disabled with ThemeModifier extension'
+  - Version: 1.28
+    RequiredApiVersion: 2.1.0
+    ReleaseDate: 2022-05-08
+    PackageUrl: https://github.com/darklinkpower/Helium/releases/download/1.28/8b15c46a-90c2-4fe5-9ebb-1ab25ba7fcb1_1_28.pthm
+    Changelog:
+      - 'Grid View: Added ThemeModifier option to place Description at the bottom (After extensions sections). Disabled by default.'
+      - 'Grid View: Improved performance of cover highlight animations'
+      - 'Grid View: Made glow border of playing games static. Can be enabled with ThemeModifier extension'
