Grid View: Added ThemeModifier extension option to use rounded covers

--- a/source/thememodifier.yaml
+++ b/source/thememodifier.yaml
@@ -19,3 +19,4 @@ Constants:
     - GridViewLibraryGameShowFavorite: 'Show favorites icon in game covers'
     - GridViewCoverDisplayLibraryBanner: 'Show game platforms and library banners on covers'
     - GridViewCoverLibraryBannerOpacity(0.5, 1.0): 'Opacity of library banner'
+    - GridViewCoverUseRoundedCorners: 'Use rounded corners for game covers'
