--- a/manifests/Installer_Manifest.yaml
+++ b/manifests/Installer_Manifest.yaml
@@ -277,3 +277,9 @@ Packages:
     Changelog:
       - 'Grid View: Added ThemeModifier extension option to use rounded covers'
       - 'Grid View: Removed playing game border and added animation instead (Again...). Can be enabled with ThemeModifier extension'
+  - Version: 1.30
+    RequiredApiVersion: 2.1.0
+    ReleaseDate: 2022-05-11
+    PackageUrl: https://github.com/darklinkpower/Helium/releases/download/1.30/8b15c46a-90c2-4fe5-9ebb-1ab25ba7fcb1_1_30.pthm
+    Changelog:
+      - 'Grid View: Game controls on covers will not be displayed when game is not hovered'
