GridView: Added icons to details labels

--- a/source/thememodifier.yaml
+++ b/source/thememodifier.yaml
@@ -20,3 +20,4 @@ Constants:
     - GridViewCoverDisplayLibraryBanner: 'Show game platforms and library banners on covers'
     - GridViewCoverLibraryBannerOpacity(0.5, 1.0): 'Opacity of library banner'
     - GridViewCoverUseRoundedCorners: 'Use rounded corners for game covers'
+    - GridViewDetailsIconsVisibility: 'Visibility of icons in details'
